# TokenTrust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
action/: action.yml
fixtures/: tasks.yml
python/: .gitignore  README.md  pyproject.toml
python/docs/: concepts.md  getting-started.md
python/docs/integrations/: ci.md
python/examples/: README.md
python/examples/01-basic-verify/: verify_with_fake_adapter.py
python/examples/02-json-report-ci-gate/: ci_gate.py
python/examples/03-cross-tool-benchmark/: cross_tool_benchmark.py
python/src/tokentrust/: __init__.py  cli.py  verify.py
python/src/tokentrust/adapters/: __init__.py  base.py  headroom.py  registry.py  rtk.py  spawn_utils.py  types.py
python/src/tokentrust/categories/: __init__.py  claims.py  live_api_client.py  tt01_compression_ratio.py  tt02_cost_delta.py  tt03_never_worse_guard.py  tt04_cross_tool_benchmark.py  tt05_version_drift.py
python/src/tokentrust/fixtures/repos/add-rate-limiter-feature/: server.js
python/src/tokentrust/fixtures/repos/docstring-add-jsdoc-class/: cart-model.js
python/src/tokentrust/fixtures/repos/fix-async-race-condition/: counter.js
python/src/tokentrust/fixtures/repos/fix-memory-leak-listener/: resize-watcher.js
python/src/tokentrust/fixtures/repos/fix-typo-docstring/: cart.js
python/src/tokentrust/fixtures/repos/refactor-extract-service/: routes.js
python/src/tokentrust/fixtures/repos/refactor-split-utils/: utils.js
python/src/tokentrust/fixtures/repos/verify-git-log-filter/: captured-output.txt
python/src/tokentrust/fixtures/repos/verify-go-test-filter/: captured-output.txt
python/src/tokentrust/fixtures/repos/verify-pytest-filter/: captured-output.txt
python/src/tokentrust/fixtures/repos/verify-tsc-filter/: captured-output.txt
python/src/tokentrust/fixtures/repos/verify-vitest-filter/: captured-output.txt
python/src/tokentrust/mcp/: __init__.py  server.py  tool_schema.py
python/src/tokentrust/report/: __init__.py  json_report.py  terminal.py  types.py
python/src/tokentrust/tasks/: __init__.py  loader.py  types.py
python/src/tokentrust/tokenizer/: __init__.py
python/tests/: conftest.py  test_adapters.py  test_base_adapter.py  test_cli.py  test_live_api_client.py  test_loader.py  test_mcp_server.py  test_mcp_tool_schema.py  test_report.py  test_spawn_utils.py  test_tokenizer.py  test_tt01_compression_ratio.py  test_tt02_cost_delta.py  test_tt03_never_worse_guard.py  test_tt04_cross_tool_benchmark.py  test_tt05_version_drift.py  test_verify_e2e.py
src/: cli.smoke.test.ts  cli.test.ts  cli.ts  verify.test.ts  verify.ts
src/adapters/: base.test.ts  base.ts  headroom.test.ts  headroom.ts  lean-ctx.test.ts  lean-ctx.ts  registry.test.ts  registry.ts  rtk.test.ts  rtk.ts  spawn-utils.test.ts  spawn-utils.ts  types.ts
src/categories/: claims.test.ts  claims.ts  live-api-client.test.ts  live-api-client.ts  tt01_compression_ratio.test.ts  tt01_compression_ratio.ts  tt02_cost_delta.test.ts  tt02_cost_delta.ts  tt03_never_worse_guard.test.ts  tt05_version_drift.ts  (+4 more)
(+47 files in other folders)
